feat: support parsing edge rules & prepare for URI tree covertion